first kibana row in dashboard tab height adjusted

--- a/src/app/Components/CommonComponents/layout/layout.component.css
+++ b/src/app/Components/CommonComponents/layout/layout.component.css
@@ -42,7 +42,7 @@
   /*-ms-flex: 0 0 90%;*/
   /*flex: 0 0 90%;*/
   width: 90%;
-  margin-left: 10%;
+  /*margin-left: 10%;*/
 }
 
 #page-content-wrapper{
