kibana iframe height adjusted, storing values on session storage is removed

--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -7,37 +7,37 @@
         <div class="stat-container">
           <div class="col-md-2">
             <div class="stat" style="display: inline">
-              <h1>{{sysMetricObjectDummy['disconnects']}}</h1>
+              <h1>{{sysMetricObject['disconnects']}}</h1>
               <h4>Disconnections</h4>
             </div>
           </div>
           <div class="col-md-2">
             <div class="stat" style="display: inline">
-              <h1>{{sysMetricObjectDummy['failed']}}</h1>
+              <h1>{{sysMetricObject['failed']}}</h1>
               <h4>Lost Messages</h4>
             </div>
           </div>
           <div class="col-md-2">
             <div class="stat" style="display: inline">
-              <h1>{{sysMetricObjectDummy['tps'] | number : fractionSize}}</h1>
+              <h1>{{sysMetricObject['tps'] | number : fractionSize}}</h1>
               <h4>Transactions /s</h4>
             </div>
           </div>
           <div class="col-md-2">
             <div class="stat" style="display: inline">
-              <h1>{{sysMetricObjectDummy['rtt']}}</h1>
+              <h1>{{sysMetricObject['rtt']}}</h1>
               <h4>Round Trip Time</h4>
             </div>
           </div>
           <div class="col-md-2">
             <div class="stat" style="display: inline">
-              <h1>{{sysMetricObjectDummy['requests'] | number : fractionSize}}</h1>
+              <h1>{{sysMetricObject['requests'] | number : fractionSize}}</h1>
               <h4>Total Requests</h4>
             </div>
           </div>
           <div class="col-md-2">
             <div class="stat" style="display: inline-block">
-              <h1>{{sysMetricObjectDummy['clients']}}</h1>
+              <h1>{{sysMetricObject['clients']}}</h1>
               <h4>Connected Clients</h4>
             </div>
           </div>
@@ -63,7 +63,7 @@
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let node of viewDataDummy?.nodes" id="{{node['state']}}" >
+          <tr *ngFor="let node of viewData?.nodes" id="{{node['state']}}" >
             <td >{{node['nodeName']}}</td>
             <td >{{node['ip']}}</td>
             <td class="{{node['state']}}">{{node['state']}}</td>
@@ -110,7 +110,7 @@
         <!--<iframe frameborder="0" src="http://ntp-kibana.directfn.net/app/kibana#/visualize/edit/5a663080-9d3a-11e7-a67b-8bf9d4ab9c1d?embed=true&_g=(refreshInterval%3A('%24%24hashKey'%3A'object%3A201'%2Cdisplay%3A'5%20seconds'%2Cpause%3A!f%2Csection%3A1%2Cvalue%3A5000)%2Ctime%3A(from%3Anow-15m%2Cmode%3Aquick%2Cto%3Anow))"
                 height="350" width="100%"></iframe>-->
         <iframe frameborder="0" src="http://elk.directfn.net/goto/c1373f17e1d88db0328a447363ae018f?embed=true"
-                height="350" width="100%"></iframe>
+                height="400" width="100%"></iframe>
       </div>
 
     </div>
@@ -126,7 +126,7 @@
         <!--<iframe frameborder="0" src="http://ntp-kibana.directfn.net/app/kibana#/visualize/edit/5d338780-8724-11e7-9fcd-e92cca03de87?embed=true&_g=(refreshInterval%3A('%24%24hashKey'%3A'object%3A305'%2Cdisplay%3A'5%20seconds'%2Cpause%3A!f%2Csection%3A1%2Cvalue%3A5000)%2Ctime%3A(from%3Anow-15m%2Cmode%3Aquick%2Cto%3Anow))"
                 height="350" width="100%"></iframe>-->
         <iframe frameborder="0" src="http://elk.directfn.net/goto/4f71cde1461ab78015ed4daaac5831e9?embed=true"
-                height="350" width="100%"></iframe>
+                height="400" width="100%"></iframe>
       </div>
 
     </div>
@@ -138,7 +138,7 @@
         <!--<iframe frameborder="0" src="http://ntp-kibana.directfn.net/app/kibana#/visualize/edit/03e417f0-87e5-11e7-aab5-5f76b40c9632?embed=true&_g=(refreshInterval%3A('%24%24hashKey'%3A'object%3A208'%2Cdisplay%3A'5%20seconds'%2Cpause%3A!f%2Csection%3A1%2Cvalue%3A5000)%2Ctime%3A(from%3Anow-15m%2Cmode%3Aquick%2Cto%3Anow))"
                 height="350" width="100%"></iframe>-->
         <iframe frameborder="0" src="http://elk.directfn.net/goto/7f8cfc2b8f1ecdb3cbafa2f1f928a511?embed=true"
-                height="350" width="100%"></iframe>
+                height="400" width="100%"></iframe>
       </div>
     </div>
   </div>
