--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,9 +1,9 @@
 
 <div class="container" id="login-popup">
 
-  <div class="col-md-6 col-md-offset-3 scale-up-center" id="login-box">
-    <button (click)="this.popup.close()" id="close-button"></button>
+  <div class="col-md-6 col-md-offset-3 scale-up-center shadow" id="login-box">
       <div class="form-box">
+        <button (click)="this.popup.close()" id="close-button"></button>
         <h3>Log In</h3>
         <br>
         <p *ngIf="message" class="text-center error">{{message}}</p>
