session table rows made with link to the session popup

--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
             <th>MEMORY (MB)</th>
             <th>THREADS</th>
             <th>CPU %</th>
-            <th>Last</th>
+            <th>Last Updated Time</th>
           </tr>
           </thead>
           <tbody>
