--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -1,21 +1,3 @@
-/*!* The Overlay (background) *!*/
-/*#login-popup {*/
-  /*!* Height & width depends on how you want to reveal the overlay (see JS below) *!*/
-  /*height: 100%;*/
-  /*width: 100%;*/
-  /*position: fixed; !* Stay in place *!*/
-  /*z-index: 1; !* Sit on top *!*/
-  /*left: 0;*/
-  /*top: 0;*/
-  /*background-color: rgb(0,0,0); !* Black fallback color *!*/
-  /*background-color: rgba(0,0,0, 0.9); !* Black w/opacity *!*/
-  /*overflow-x: hidden; !* Disable horizontal scroll *!*/
-  /*transition: 0.5s; !* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) *!*/
-/*}*/
-
-
-
-
 /* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
@@ -33,8 +15,10 @@ input[type=text], input[type=password] {
 .container {
   padding: 16px;
   background-color: rgba(51, 50, 52, 0.4);
-  height: 90%;
-  width: 90%;
+  width: 100%;
+  margin-right: 0%;
+  margin-left: 10%;
+  max-width: 90%;
 }
 
 #login-box{
@@ -44,6 +28,7 @@ input[type=text], input[type=password] {
   top: 30%;
   left: 0%;
   height: 250px;
+  width: 40%;
   background-color: darkgrey;
   padding-right: 0px;
   padding-left: 0px;
