--- a/src/app/Components/CommonComponents/layout/layout.component.css
+++ b/src/app/Components/CommonComponents/layout/layout.component.css
@@ -18,7 +18,7 @@
 }
 
 #data-content{
-  background-color: rgba(51, 50, 52, 0.96);
+  background-color: #5b5b5b;
   height: 100%;
   overflow-y: auto;
 }
