share-session-data.service removed, client-count-graph. tab implementation started

--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -92,10 +92,10 @@
   <div ng-show="showKibanaDashboard" class="row" id="first-kibana-row">
     <div class="col-md-6 load-panel">
       <div class="panel wd-panel" id="dashboard-load">
-        <div class="wd-panel-heading">
+        <div class="wd-panel-heading" id="sys-load-avg">
           System Load Average
         </div>
-        <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>
+        <svg  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>
       </div>
       <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>
     </div>
