--- a/src/app/Components/client-count-graph/client-count-graph.component.html
+++ b/src/app/Components/client-count-graph/client-count-graph.component.html
@@ -1,3 +1,11 @@
-<p>
-  client-count-graph works!
-</p>
+<!--title-->
+<div class="row" id="title">
+  <div class="col-md-12">
+    <div class="panel wd-panel dark-panel">
+      <h2>Client Count Graph</h2>
+    </div>
+  </div>
+</div>
+
+
+
