--- a/src/app/Components/view/view.component.html
+++ b/src/app/Components/view/view.component.html
@@ -1,7 +1,19 @@
+<!--title-->
+<div class="row" id="title">
+  <div class="col-md-12">
+    <div class="panel wd-panel dark-panel">
+      <h2>View</h2>
+    </div>
+  </div>
+</div>
+
 <div class="col-sm-12 panel wd-panel">
-  <div id="main-view">
+  <div class="row">
+    <div id="main-view">
+    </div>
+    <div id="view-legend">
+    </div>
   </div>
-  <div id="view-legend">
-  </div>
+
 </div>
 
