--- a/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
@@ -6,11 +6,12 @@
       <li class="sidelist"><a [routerLink]="['/home']">Home</a></li>
       <li class="sidelist"><a [routerLink]="['/dashboard']" >Dashboard</a></li>
       <li class="sidelist"><a [routerLink]="['/view']">View</a></li>
-      <li class="sidelist"><a [routerLink]="['/requests']">Requests</a></li>
+      <li class="sidelist"><a [routerLink]="['/requests']">Client Routes</a></li>
       <li class="sidelist"><a [routerLink]="['/manage']" >Manage</a></li>
       <li class="sidelist"><a [routerLink]="['/recouncile']">Reconcile</a></li>
       <li class="sidelist"><a [routerLink]="['/sessions']">Session & Messages</a></li>
       <li class="sidelist"><a [routerLink]="['/slamesssages']">SLA Messages</a></li>
+      <li class="sidelist"><a [routerLink]="['/slaconfiguration']">SLA Configuration</a></li>
       <li class="sidelist"><a [routerLink]="['/clientcount']" >Clinet Count Graph</a></li>
 
     </ul>
