--- a/src/app/Components/CommonComponents/layout/layout.component.css
+++ b/src/app/Components/CommonComponents/layout/layout.component.css
@@ -21,7 +21,7 @@
   background-color: #5b5b5b;
   height: 100%;
   overflow-y: auto;
-  margin-top: 40px;
+  /*margin-top: 40px;*/
 }
 
 /*#page-content-wrapper{*/
