popping up Components by popupService is implemented

--- a/src/app/Components/specific-messages/specific-messages.component.html
+++ b/src/app/Components/specific-messages/specific-messages.component.html
@@ -1,16 +1,16 @@
-<!--&lt;!&ndash;Title&ndash;&gt;-->
-<!--<div class="row">-->
-  <!--<div class="col-md-12">-->
-    <!--<div class="panel wd-panel dark-panel">-->
-      <!--<h3>Specific Messages</h3>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
+<!--Title-->
 <div class="row">
-  <div class="col-md-3" id="back-button">
-    <button mat-raised-button (click)="backToSession(showSpecificMessages)"><< Back to Session & Messages</button>
+  <div class="col-md-12">
+    <div class="panel wd-panel dark-panel">
+      <h3>Specific Messages</h3>
+    </div>
   </div>
 </div>
+<!--<div class="row">-->
+  <!--<div class="col-md-3" id="back-button">-->
+    <!--<button mat-raised-button (click)="backToSession(showSpecificMessages)"><< Back to Session & Messages</button>-->
+  <!--</div>-->
+<!--</div>-->
 
 <div class="row">
   <div class="col-md-12">
