--- a/src/app/Components/specific-messages/specific-messages.component.css
+++ b/src/app/Components/specific-messages/specific-messages.component.css
@@ -59,3 +59,43 @@ a:hover{
 #specific-messages-table{
   max-height: 600px;
 }
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
+}
+
+.box{
+  position: relative;
+  top: 40%;
+  width: 50%;
+  left: 27%;
+  height: 175px;
+  background-color: darkgray;
+  border-radius: 20px;
+}
+
+.box-header{
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.box-body{
+  width: 100%;
+  padding: 20px;
+}
+
+.box-footer{
+  float: right;
+  padding-right: 45%;
+}
+
+mat-header-row{
+  z-index: 10!important;
+}
