show kibana diagrams using configuration file implemented

--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -89,7 +89,7 @@
   </div>
 
   <!--dashboard load average display-->
-  <div ng-show="showKibanaDashboard" class="row" id="first-kibana-row">
+  <div *ngIf="showKibanaDashboard" class="row" id="first-kibana-row">
     <div class="col-md-6 load-panel">
       <div class="panel wd-panel" id="dashboard-load">
         <div class="wd-panel-heading" id="sys-load-avg">
@@ -117,7 +117,7 @@
 
   </div>
 
-  <div ng-show="showKibanaDashboard" class="row" id="bottom-row">
+  <div *ngIf="showKibanaDashboard" class="row" id="bottom-row">
     <div class="col-md-6 load-panel">
       <div class="panel wd-panel" id="tps-kibana-wrap-orders">
         <div class="wd-panel-heading">
