--- a/src/app/Components/sla-configuration/sla-configuration.component.css
+++ b/src/app/Components/sla-configuration/sla-configuration.component.css
@@ -2,10 +2,14 @@
   font-size: medium;
 }
 
-.container{
-  width: 80%;
-  height: 80%;
+.row{
   background-color: #9d9d9d;
+  margin-right: 10px;
+}
+
+.data-container{
+  width: 100%;
+  height: 100%;
   margin-bottom: 50px;
 
 }
@@ -16,10 +20,19 @@
   padding: 30px;
 }
 
-.round-time{
+.round-time {
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: 100px;
+  padding-left: 10px;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 h4{
@@ -32,6 +45,4 @@ ul {
   -webkit-columns: 2;
   -moz-columns: 2;
 }
-li:before {
-  content: "• ";
-}
+
