--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -89,20 +89,23 @@
   </div>
 
   <!--dashboard load average display-->
-  <div *ngIf="showKibanaDashboard" class="row" id="first-kibana-row">
-    <div class="col-md-6 load-panel">
+  <div class="row" id="first-kibana-row">
+    <div class="col-md-6 load-panel" id="dashboard-tps">
       <div class="panel wd-panel" id="dashboard-load">
         <div class="wd-panel-heading" id="sys-load-avg">
           System Load Average
         </div>
-        <svg  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>
+        <div class="chart-container">
+          <canvas id="canvas">{{chart}}</canvas>
+        </div>
+        <!--<svg  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>-->
       </div>
-      <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>
+      <!--<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>-->
     </div>
 
   <!--kibana blocks-->
 
-    <div class="col-md-6 load-panel" >
+    <div *ngIf="showKibanaDashboard"  class="col-md-6 load-panel" >
       <div class="panel wd-panel" id="tps-kibana-wrap-all">
         <div class="wd-panel-heading">
           TPS (Executions + Orders) Graph
