SLA Configuration Completed, Problem with chart data mixing fixed

--- a/src/app/Components/client-count-graph/client-count-graph.component.css
+++ b/src/app/Components/client-count-graph/client-count-graph.component.css
@@ -1,3 +1,10 @@
-#canvas{
+#canvas2{
   height: 570px!important;
+}
+
+#no-data{
+  text-align: center;
+  position: relative;
+  left: 40%;
+  padding: 30px;
 }
