--- a/src/app/Components/client-count-graph/client-count-graph.component.html
+++ b/src/app/Components/client-count-graph/client-count-graph.component.html
@@ -8,6 +8,7 @@
 </div>
 
 <div id="graph-container">
-  <canvas id="canvas">{{chart}}</canvas>
+  <canvas id="canvas2">{{chart2}}</canvas>
 </div>
+
 
