--- a/src/app/Components/session-popup/session-popup.component.html
+++ b/src/app/Components/session-popup/session-popup.component.html
@@ -10,8 +10,8 @@
         <p><strong>Start Time: </strong>{{startTime}}</p>
         <!--<p *ngIf="dataArrived">arrived data:{{this.currentSessionData}}</p>-->
       </form>
-      <div *ngIf="chart" id="chart-container">
-        <canvas *ngIf="!isGraphDataNull" id="canvas">{{chart}}</canvas>
+      <div *ngIf="chart3" id="chart-container">
+        <canvas *ngIf="!isGraphDataNull" id="canvas3">{{chart3}}</canvas>
         <div *ngIf="isGraphDataNull" class="slide-bottom" id="no-data-alert"><p><strong>No Data Available</strong></p></div>
       </div>
       <div class="button-container" *ngIf="hideViewAllButton">
