--- a/src/app/Components/sla-configuration/sla-configuration.component.html
+++ b/src/app/Components/sla-configuration/sla-configuration.component.html
@@ -1,4 +1,13 @@
-<div class="data-container">
+<!--title-->
+<div class="row" id="title">
+  <div class="col-md-12">
+    <div class="panel wd-panel dark-panel">
+      <h2>SLA Configuaration</h2>
+    </div>
+  </div>
+</div>
+
+<div class="panel wd-panel" id="bulk-container" *ngIf="isDataAvailable">
   <div class="row">
     <div class="default-time">
       <h2>Default Time:</h2>
@@ -22,6 +31,12 @@
         </tr>
       </table>
     </div>
+  </div>
+</div>
+
+<div class="panel wd-panel" *ngIf="!isDataAvailable">
+  <div class="row">
+    <h2 id="no-data">No data Available</h2>
   </div>
 </div>
 
