--- a/src/app/Components/requests/requests.component.css
+++ b/src/app/Components/requests/requests.component.css
@@ -45,7 +45,10 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  padding: 30px;
+  padding-top: 0px;
+  padding-right: 30px;
+  padding-right: 30px;
+  padding-bottom: 0px;
   font-size: medium;
 }
 .form-inline > * {
@@ -56,11 +59,12 @@
   width: 98%;
   align-items: center;
   padding-left: 2%;
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 #form-history{
   height: 50px;
+  margin-bottom: 10px;
 }
 
 .form-wrapper{
@@ -98,3 +102,17 @@ mat-row {
   margin-bottom: 150px;
 }
 
+#history-title{
+  width: 100%;
+  height: 25px;
+  margin-top: 10px;
+}
+
+#client-routes-title{
+  margin-top: 10px;
+  height: 25px;
+}
+
+#client-routes-form{
+  height: 50px;
+}
