nav bar spelling mistake corrected, recounclie and manage tab commented

--- a/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
@@ -7,8 +7,8 @@
       <li class="sidelist"><a [routerLink]="['/dashboard']" >Dashboard</a></li>
       <li class="sidelist"><a [routerLink]="['/view']">View</a></li>
       <li class="sidelist"><a [routerLink]="['/requests']">Client Routes</a></li>
-      <li class="sidelist"><a [routerLink]="['/manage']" >Manage</a></li>
-      <li class="sidelist"><a [routerLink]="['/recouncile']">Reconcile</a></li>
+      <!--<li class="sidelist"><a [routerLink]="['/manage']" >Manage</a></li>-->
+      <!--<li class="sidelist"><a [routerLink]="['/recouncile']">Reconcile</a></li>-->
       <li class="sidelist"><a [routerLink]="['/sessions']">Session & Messages</a></li>
       <li class="sidelist"><a [routerLink]="['/slamesssages']">SLA Messages</a></li>
       <li class="sidelist"><a [routerLink]="['/slaconfiguration']">SLA Configuration</a></li>
