sla configuration table was implemented

--- a/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
@@ -12,7 +12,7 @@
       <li class="sidelist"><a [routerLink]="['/sessions']">Session & Messages</a></li>
       <li class="sidelist"><a [routerLink]="['/slamesssages']">SLA Messages</a></li>
       <li class="sidelist"><a [routerLink]="['/slaconfiguration']">SLA Configuration</a></li>
-      <li class="sidelist"><a [routerLink]="['/clientcount']" >Clinet Count Graph</a></li>
+      <li class="sidelist"><a [routerLink]="['/clientcount']" >Client Count Graph</a></li>
 
     </ul>
 
