--- a/src/app/Components/sla-configuration/sla-configuration.component.css
+++ b/src/app/Components/sla-configuration/sla-configuration.component.css
@@ -1,5 +1,12 @@
 .round-time{
   font-size: medium;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 50px;
+  position: relative;
+  left: 20px;
+  width: 75%;
+  height: 539px;
 }
 
 .data-container{
@@ -14,14 +21,7 @@
   float: left;
   padding: 30px;
   left: 25px;
-}
-
-.round-time {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 10px;
-  position: relative;
-  left: 20px;
+  max-height: 60px;
 }
 
 table, th, td {
@@ -48,5 +48,76 @@ ul {
   position: relative;
   left: 40%;
   padding: 30px;
+}
+
+#bulk-container{
+  max-height: 550px;
+}
+
+.mat-column-serviceID{
+  justify-content: space-evenly;
+}
+.mat-column-serviceName{
+  justify-content: space-evenly;
+}
+.mat-column-roundTime{
+  justify-content: space-evenly;
+}
+
+.table-btn{
+ margin: 5px;
+}
+
+#status-banner{
+  color: #ff0511;
+}
+.tables-scrollable {
+  height: 400px;
+  overflow: auto;
+  display: inline-block;
+  border: none;
+  padding: 0px;
+}
+.tables-scrollable tbody {
+  width: 100%;
+  display: inline-table;
+}
+
+.scale-up-top {
+  -webkit-animation: scale-up-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: scale-up-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.card{
+  height: 500px;
+}
+
+@-webkit-keyframes scale-up-top {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+  }
+}
+@keyframes scale-up-top {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+  }
 }
 
